infra/yamls/joslateriii.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joslateriii
