infra/yamls/mkarch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mkarch
